--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,4 +8,5 @@ log4.logger.test = DEBUG
 
 log4j.logger.httpclient = WARN
 log4j.logger.org.apache.commons.httpclient = WARN
+log4j.logger.org.apache.http = WARN
 
