--- a/nuxeo-webdriver-test/pom.xml
+++ b/nuxeo-webdriver-test/pom.xml
@@ -21,11 +21,15 @@
       <artifactId>selenium</artifactId>
       <version>2.0a7</version>
     </dependency>
-
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-server</artifactId>
       <version>2.0a7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.concordion</groupId>
+      <artifactId>concordion</artifactId>
+      <version>1.3.1</version>
     </dependency>
   </dependencies>
 
