--- a/nuxeo-correspondence-qa/pom.xml
+++ b/nuxeo-correspondence-qa/pom.xml
@@ -3,8 +3,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.nuxeo.ecm.platform</groupId>
-    <artifactId>nuxeo-features-parent</artifactId>
+    <groupId>org.nuxeo.qa</groupId>
+    <artifactId>nuxeo-qa-behaviourdriven-parent</artifactId>
     <version>5.4.1-SNAPSHOT</version>
   </parent>
 
@@ -12,30 +12,14 @@
   <artifactId>nuxeo-correspondence-qa</artifactId>
   <name>nuxeo-correspondence-qa project</name>
   <description>nuxeo-correspondence-qa project description</description>
-  <version>1.0-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
       <groupId>org.nuxeo.qa</groupId>
-      <artifactId>nuxeo-qa-behaviourdriven-framework</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium</artifactId>
-      <version>2.0a7</version>
-    </dependency>
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-server</artifactId>
-      <version>2.0a7</version>
-    </dependency>
-    <dependency>
-      <groupId>org.concordion</groupId>
-      <artifactId>concordion</artifactId>
-      <version>1.3.1</version>
+      <artifactId>nuxeo-qa-behaviourdriven</artifactId>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
