--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,23 @@
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium</artifactId>
         <version>2.0b1</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-server</artifactId>
         <version>2.0b1</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.concordion</groupId>
@@ -55,5 +67,4 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
 </project>
